config/waybar/style.css
* {
    font-family: "JetBrainsMono Nerd Font", monospace;
    font-size: 12px;
    border-radius: 0;
    min-height: 0;
}

window#waybar {
    background:  #382A20;
    margin: 40px 40px;
    color: #fcfcfa;
    border-radius: 8px;
}

.modules-left,
.modules-center,
.modules-right {
    margin: 0;
}


#workspaces button.special {
    color: #fcfcfa;
}

#workspaces button.special.active {
    color: #f38d70;
}

#workspaces,
#window,
#tray {
    color: #fcfcfa;
    padding: 3px 6px;
    margin: 0px;
}

#clock {
    color: #f9cc6c;
    font-weight: 900;
    margin: 0px;
    padding: 2px 8px;
}

#custom-power {
    color: #fcfcfa;
    margin-top: 0px;
    margin-right: 0px;
    padding: 0px 12px;
    border-width: 0px;
}

#network,
#custom-lock,
#custom-reboot,
#bluetooth,
#battery,
#pulseaudio,
#backlight,
#custom-temperature,
#memory,
#cpu {
    color: #fcfcfa;
    margin: 0px;
    padding: 2px 6px;
}

#custom-temperature.critical,
#pulseaudio.muted {
    color: #fd6883;
}

#bluetooth:hover,
#network:hover,
#backlight:hover,
#battery:hover,
#pulseaudio:hover,
#custom-temperature:hover,
#memory:hover,
#cpu:hover,
#clock:hover,
#window:hover {
    color: #f38d70;
}

#custom-lock:hover {
    color: #fd6883;
}

#custom-reboot:hover {
    color: #fd6883;
}

#custom-power:hover {
    color: #fd6883;
}

#workspaces button.active {
    color: #f38d70;
}

#workspaces button {
    color: #fcfcfa;
}

#workspaces button:hover {
    color: #f38d70;
    background: rgba(243, 141, 112, 0.2);
}

#workspaces button.urgent {
    color: #fd6883;
}

#window {
    font-weight: 700;
}

#battery.warning {
    color: #f38d70;
}

#battery.critical {
    color: #fd6883;
}

#battery.charging {
    color: #f38d70;
}

tooltip {
    background: #221f22;
    border: 1px solid #f38d70;
    color: #fcfcfa;
    border-radius: 6px;
}

